# Noodle-Core

./: .coveragerc  .editorconfig  .gitignore  .gitleaks.toml  .kilocodemodes  .markdownlint.json  .pre-commit-config.yaml  .snyk  .sync_marker_server.txt  .trivyignore  .versionrc  CHANGELOG_NIP_v1.md  CHANGELOG_NIP_v2.md  CHANGELOG_NIP_v3.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v3.0.0.md  ROADMAP.md  SUPPORT.md  TUTORIALS_COMPLETION_SUMMARY.md  agent_test.sh  commit_message.txt  commit_msg2.txt  coverage.xml  docker-compose-sonarqube.yml  docker-compose.prod.yml  github_plan.txt  noodle.json  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  sonar-project.properties  sonar-quality-gates.json  test-task.json  test_v3_features.py  test_v3_features.sync-conflict-20260117-143930-Q6HFROQ.py  (+1 more)
.archive/: .github-workflows-auto-migration.yml  AGENTS.md  AI_AGENTS_ANALYSIS.md  ARCHITECTURE_OVERVIEW.md  CI_CD_TEST_SUMMARY.md  DAG4_COMPLETION_REPORT.md  DOCKER_DEVELOPMENT.md  GITHUB_ACTIONS_SETUP_GUIDE.md  IDE_IMPORT_FIX_PLAN.md  MIGRATION_MODE_WORKFLOW.md  NOODLE_AI_CHAT_IMPLEMENTATION_REPORT.md  NOODLE_IMPLEMENTATION_PLAN.md  NOODLE_LANGUAGE_IMPROVEMENT_PLAN.md  NOODLE_LANGUAGE_SUCCESS_METRICS.md  NOODLE_PYTHON_INTEGRATION_ENHANCEMENT_PLAN.md  NOODLE_PYTHON_INTEGRATION_ROADMAP_INTEGRATION.md  NOODLE_UNIFIED_DOCUMENTATION.md  NOODLE_VSCODE_EXTENSION_FINAL_TEST_REPORT.md  PROJECT_STRUCTURE.md  PROOF_OF_OWNERSHIP.md  PYTHON_ARCHIVING_ANALYSIS_REPORT.md  README.md  (+54 more)
.archive/noodle-desktop-tauri/: Cargo.toml  tauri.conf.json
.archive/noodle-desktop-tauri/src/: lib.rs  main.rs
noodle-network-noodlenet/: config.py  fault_tolerance.py  identity.py  mesh.py  monitoring.py  orchestrator.py  pyproject.toml  scheduler.py  test_ahr_compatibility.py  test_ahr_compatibility_simple.py  test_memory_management.py  test_mesh_connectivity.py
noodle-network-noodlenet/ahr/: ahr_base.py  ahr_performance_optimizer.py  compiler.py
noodle-network-noodlenet/converter/: fix_ntir_generator.py  onnx_parser.py
noodle-network-noodlenet/docs/: audio_operators_api.md
noodle-network-noodlenet/examples/: audio_feature_demo.py
noodle-network-noodlenet/integration/: example_usage.py
noodle-network-noodlenet/noodlenet/: config.py  discovery.py  fault_tolerance.py  hardware.py  identity.py  link.py  optimization.py  scheduler.py  security.py  test_ahr_compatibility_simple.py  test_comprehensive.py
noodle-network-noodlenet/noodlenet/converter/: __init__.py  matrix_optimizer.py  ntir_output_default.json
noodle-network-noodlenet/noodlenet/core/: __init__.py
noodle-network-noodlenet/noodlenet/docs/: tutorial_complete_workflow.md
noodle-network-noodlenet/noodlenet/integration/: __init__.py  orchestrator.py  performance_integration.py
noodle-network-noodlenet/noodlenet/monitoring/: performance_monitor.py
noodle-network-noodlenet/noodlenet/tests/: test_performance_optimizations.py
noodle-network-noodlenet/noodlenet/vision/: __init__.py  memory.py  ops_sensors.py  ops_video.py  stream.py
noodle-network-noodlenet/scaling/: horizontal_scaler.py
noodle-network-noodlenet/vision/: io.py
noodle-poc-fase1/: .gitignore  LICENSE  debug_tensor_test.py  pyproject.toml  run_fase4_demo_utf8.cmd  run_fase4_demo_utf8.ps1
noodle-poc-fase1/docs/: IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  project_statistics.json
noodle-poc-fase1/examples/: fix_imports.py  profile_gpt2.py  profile_gpt2_fixed.py  profile_rtx1050.py  test_remote_connection.py
noodle-poc-fase1/protos/: stage_service.proto
noodle-poc-fase1/src/: plan.py  planner.py  simulator.py
noodle-poc-fase1/src/noodle_poc/: __init__.py  hooks.py  metrics.py
noodle-poc-fase1/src/noodle_poc/advanced/planner/: adaptive.py
noodle-poc-fase1/src/noodle_poc/capability_matcher/: __init__.py
noodle-poc-fase1/src/noodle_poc/capability_matcher/tests/: test_matcher.py
noodle-poc-fase1/src/noodle_poc/network/: protos.py  services.py  utils.py
noodle-poc-fase1/src/noodle_poc/simulator/: core.py
noodle-poc-fase1/tests/: __init__.py  quick_test.py  test_phase2_planning.py
noodlecore-deployment/ide/src-tauri/: Cargo.toml  tauri.conf.json
(+3431 files in other folders)
