[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noodlenet"
version = "0.1.0"
description = "NoodleNet - Network components for NoodleCore"
authors = [
    {name = "Noodle Team", email = "team@noodle.ai"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/noodle-ai/noodlenet"
Repository = "https://github.com/noodle-ai/noodlenet"
Documentation = "https://noodlenet.readthedocs.io"

[tool.setuptools.packages.find]
include = ["noodlenet*"]