[package]
name = "noodle-ide"
version = "0.1.0"
description = "A Tauri application"
authors = ["You"]
license = ""
repository = ""
default-run = "noodle-ide"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-store = "2.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
parking_lot = "0.12"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
notify = "6.1"
walkdir = "2.4"
serde_yaml = "0.9"
config = "0.14"
once_cell = "1.19"
regex = "1.10"
glob = "0.3"
indexmap = { version = "2.1", features = ["serde"] }
petgraph = "0.6"

[dependencies.tauri-plugin-websocket]
version = "2.0"
features = ["websocket-message"]

[dependencies.tauri-plugin-updater]
version = "2.0"

[dependencies.tauri-plugin-localhost]
version = "2.0"
