[package]
name = "noodle-ide"
version = "0.1.0"
description = "Noodle IDE with OpenRouter AI integration"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
walkdir = "2.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
